fix(jupyter): corretto errore WARNING: Non-consecutive header level increase; H1 to H3 [myst.header]

--- a/docs/notebooks/energy_data_exploration_distributions.ipynb
+++ b/docs/notebooks/energy_data_exploration_distributions.ipynb
@@ -50,7 +50,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Introduction to Boxplot visualization for time series data\n",
+    "## Boxplot\n",
     "\n",
     "Boxplots, also known as box-and-whisker plots, are a popular data visualization technique used to summarize the distribution of a dataset. The boxplot provides a quick and intuitive way to visualize the median, quartiles, and extreme values of a dataset, making it a valuable tool for exploratory data analysis and statistical inference.\n",
     "\n",
