--- a/docs/notebooks/energy_data_exploration_heatmaps.ipynb
+++ b/docs/notebooks/energy_data_exploration_heatmaps.ipynb
@@ -73,7 +73,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Carpet plot\n",
+    "## Carpet plot\n",
     "\n",
     "A carpet plot is a visualization technique for time series data that shows multiple individual time series as a \"carpet\" of colored blocks, where each row represents a different time series and each column represents a time step. The color of each block represents the value of the time series at that time step, and the blocks are arranged so that consecutive time steps are shown from left to right.\n",
     "\n",
