--- a/docs/notebooks/energy_data_exploration_line_plot.ipynb
+++ b/docs/notebooks/energy_data_exploration_line_plot.ipynb
@@ -70,7 +70,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Introduction to Load Profile visualization for energy-related time series data\n",
+    "## Introduction to Load Profile visualization for energy-related time series data\n",
     "\n",
     "Load profile visualization is a critical tool for analyzing and understanding energy-related time series data, such as electricity demand, renewable energy production, and energy consumption patterns. Load profiles display how energy usage varies over time, typically in hourly or sub-hourly intervals, and can provide valuable insights into energy usage patterns, peak demand periods, and opportunities for energy conservation.\n",
     "\n",
