feature(toc): aggiunta numerazione capitoli

--- a/docs/notebooks/energy_data_exploration_distributions.ipynb
+++ b/docs/notebooks/energy_data_exploration_distributions.ipynb
@@ -193,6 +193,40 @@
     "collapsed": false
    },
    "id": "cacd74f8ecd1d9d6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "::::{grid}\n",
+    ":gutter: 3\n",
+    "\n",
+    ":::{grid-item-card} One!\n",
+    "Here's the first card.\n",
+    ":::\n",
+    "\n",
+    ":::{grid-item-card} Two!\n",
+    "Here's the second card.\n",
+    ":::\n",
+    "\n",
+    ":::{grid-item-card} Three!\n",
+    "Here's the third card.\n",
+    ":::\n",
+    "::::"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2be5765bc024b383"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "71cec5512055d26d"
   }
  ],
  "metadata": {
